@@ -1041,26 +1041,8 @@ class TControl extends TApplicationComponent implements IRenderable, IBindable
 	}
 
 	/**
-	 * This method is invoked after the control is instantiated by a template.
-	 * When this method is invoked, the control should have a valid TemplateControl
-	 * and has its properties initialized according to template configurations.
-	 * The control, however, has not been added to the page hierarchy yet.
-	 * The default implementation of this method will invoke
-	 * the potential parent control's {@link addParsedObject} to add the control as a child.
-	 * This method can be overriden.
-	 * @param TControl potential parent of this control
-	 * @see addParsedObject
-	 */
-	public function createdOnTemplate($parent)
-	{
-		$parent->addParsedObject($this);
-	}
-
-	/**
-	 * Processes an object that is created during parsing template.
-	 * The object can be either a component or a static text string.
-	 * By default, the object will be added into the child control collection.
-	 * This method can be overriden to customize the handling of newly created objects in template.
+	 * Adds the object instantiated on a template to the child control collection.
+	 * This method overrides the parent implementation.
 	 * Only framework developers and control developers should use this method.
 	 * @param string|TComponent text string or component parsed and instantiated in template
 	 * @see createdOnTemplate
