@@ -266,7 +266,7 @@ class TTemplate extends TApplicationComponent implements ITemplate
 		foreach($this->_tpl as $key=>$object)
 		{
 			$parent=isset($controls[$object[0]])?$controls[$object[0]]:$tplControl;
-			if(!$parent->getAllowChildControls())
+			if(($parent instanceof TControl) && !$parent->getAllowChildControls())
 				continue;
 			if(isset($object[2]))	// component
 			{
@@ -301,6 +301,7 @@ class TTemplate extends TApplicationComponent implements ITemplate
 				}
 				else if($component instanceof TComponent)
 				{
+					$controls[$key]=$component;
 					if(isset($properties['id']))
 					{
 						if(is_array($properties['id']))
@@ -314,7 +315,7 @@ class TTemplate extends TApplicationComponent implements ITemplate
 					if($parent===$tplControl)
 						$directChildren[]=$component;
 					else
-						$parent->addParsedObject($component);
+						$component->createdOnTemplate($parent);
 				}
 			}
 			else	// string
@@ -343,7 +344,7 @@ class TTemplate extends TApplicationComponent implements ITemplate
 		// if the child needs its own child controls.
 		foreach($directChildren as $control)
 		{
-			if($control instanceof TControl)
+			if($control instanceof TComponent)
 				$control->createdOnTemplate($tplControl);
 			else
 				$tplControl->addParsedObject($control);
